feat: telegram bot commands added
