# server/seed/seed.ts
@@ -76,119 +76,119 @@ const seedDatabase = async () => {
       first_name: "Admin",
       last_name: "User",
       password: "adminpass",
-      role: Role.ADMINISTRATOR,
+      role: [Role.ADMINISTRATOR],
     },
     {
       email: "citizen@participium.com",
       first_name: "Mario",
       last_name: "Rossi",
       password: "citizenpass",
-      role: Role.CITIZEN,
+      role: [Role.CITIZEN],
     },
     {
       email: "pr@participium.com",
       first_name: "Public",
       last_name: "Relations",
       password: "prpass",
-      role: Role.PUBLIC_RELATIONS,
+      role: [Role.PUBLIC_RELATIONS],
     },
     {
       email: "tech@participium.com",
       first_name: "Luca",
       last_name: "Bianchi",
       password: "techpass",
-      role: Role.MUNICIPAL_BUILDING_MAINTENANCE,
+      role: [Role.MUNICIPAL_BUILDING_MAINTENANCE],
     },
     {
       email: "culture@participium.com",
       first_name: "Chiara",
       last_name: "Rossi",
       password: "techpass",
-      role: Role.CULTURE_EVENTS_TOURISM_SPORTS,
+      role: [Role.CULTURE_EVENTS_TOURISM_SPORTS],
     },
     {
       email: "localpublic@participium.com",
       first_name: "Marco",
       last_name: "Moretti",
       password: "techpass",
-      role: Role.LOCAL_PUBLIC_SERVICES,
+      role: [Role.LOCAL_PUBLIC_SERVICES],
     },
     {
       email: "education@participium.com",
       first_name: "Sara",
       last_name: "Conti",
       password: "techpass",
-      role: Role.EDUCATION_SERVICES,
+      role: [Role.EDUCATION_SERVICES],
     },
     {
       email: "residential@participium.com",
       first_name: "Davide",
       last_name: "Ferrari",
       password: "techpass",
-      role: Role.PUBLIC_RESIDENTIAL_HOUSING,
+      role: [Role.PUBLIC_RESIDENTIAL_HOUSING],
     },
     {
       email: "infosys@participium.com",
       first_name: "Elena",
       last_name: "Galli",
       password: "techpass",
-      role: Role.INFORMATION_SYSTEMS,
+      role: [Role.INFORMATION_SYSTEMS],
     },
     {
       email: "privatebuild@participium.com",
       first_name: "Antonio",
       last_name: "Marini",
       password: "techpass",
-      role: Role.PRIVATE_BUILDINGS,
+      role: [Role.PRIVATE_BUILDINGS],
     },
     {
       email: "greenspaces@participium.com",
       first_name: "Giulia",
       last_name: "Pellegrini",
       password: "techpass",
-      role: Role.GREENSPACES_AND_ANIMAL_PROTECTION,
+      role: [Role.GREENSPACES_AND_ANIMAL_PROTECTION],
     },
     {
       email: "road@participium.com",
       first_name: "Francesco",
       last_name: "Sala",
       password: "techpass",
-      role: Role.ROAD_MAINTENANCE,
+      role: [Role.ROAD_MAINTENANCE],
     },
     {
       email: "civilprot@participium.com",
       first_name: "Valentina",
       last_name: "Riva",
       password: "techpass",
-      role: Role.CIVIL_PROTECTION,
+      role: [Role.CIVIL_PROTECTION],
     },
     {
       email: "infra@participium.com",
       first_name: "Giorgio",
       last_name: "Costa",
       password: "infrapass",
-      role: Role.INFRASTRUCTURES,
+      role: [Role.INFRASTRUCTURES],
     },
     {
       email: "waste@participium.com",
       first_name: "Federica",
       last_name: "Neri",
       password: "wastepass",
-      role: Role.WASTE_MANAGEMENT,
+      role: [Role.WASTE_MANAGEMENT],
     },
     {
       email: "techPR@participium.com",
       first_name: "Alessandro",
       last_name: "Romano",
       password: "techpass",
-      role: Role.PUBLIC_RELATIONS,
+      role: [Role.PUBLIC_RELATIONS],
     },
     {
       email: "external@enelx.com",
       first_name: "Marco",
       last_name: "Bianchi",
       password: "externalpass",
-      role: Role.EXTERNAL_MAINTAINER,
+      role: [Role.EXTERNAL_MAINTAINER],
     },
   ];
 
